--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -1,58 +1,76 @@
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Chef John's American Goulash</title>
+
+  <link rel="stylesheet" href="/styles.css" />
+</head>
 <body>
   <h1>Chef John's American Goulash</h1>
-  <img src="/images/finished.webp" alt="Finished Goulash" />
+  <img
+    src="/images/finished.webp"
+    alt="Finished Goulash"
+    width="auto"
+    height="400"
+    style="display: block; margin-left: auto; margin-right: auto"
+  />
   <h2>Chef John's American Goulash</h2>
+
   <p>
     This is an all-time favorite dish for many people growing up when it's a
     nice cold day outside. It's warm, hearty, and always hits the spot. It's
     also very easy to make, and you can do it all in one pot.
   </p>
-  <h2>Ingredients</h2>
-  <ul>
-    <li>1 tablespoon olive oil</li>
-    <li>2 pounds lean ground beef</li>
-    <li>1 large onion, diced</li>
-    <li>4 cloves garlic, minced</li>
-    <li>2 large bay leaves</li>
-    <li>2 tablespoons paprika</li>
-    <li>2 tablespoons italian seasoning</li>
-    <li>2 tablespoon salt</li>
-    <li>1/2 teaspoon ground black pepper</li>
-    <li>1/4 teaspoon cayenne pepper</li>
-    <li>1 quart chicken broth</li>
-    <li>1 (24 ounce) jar marinara sauce</li>
-    <li>1 (15 ounce) can diced tomatoes</li>
-    <li>1 cup water</li>
-    <li>2 tablespoons soy sauce</li>
-    <li>2 cups elbow macaroni</li>
-    <li>1/4 cup chopped italian parsley</li>
-    <li>1 cup shredded cheddar cheese</li>
-  </ul>
-  <h2>Directions</h2>
-  <ol>
-    <li>Gather all Ingredients</li>
-    <li>
-      Heat oil in a pot over medium-high heat. Add ground beef and onion; cook
-      and stir until beef is browned and crumbly and onion is translucent, about
-      5 minutes. Continue to cook and stir until liquid is evaporated, 3 to 5
-      minutes. Add garlic, bay leaves, paprika, Italian seasoning, salt, black
-      pepper, and cayenne.
-    </li>
-    <li>
-      Cook, stirring occasionally, until flavors come together, about 3 minutes.
-      Pour in broth, marinara sauce, and diced tomatoes. Pour water into the
-      sauce jar, swirl, and pour into the pot. Stir in soy sauce; bring to a
-      simmer. Reduce the heat to medium and simmer until flavors intensify,
-      about 30 minutes.
-    </li>
-    <li>
-      Increase the heat to medium-high and bring to a rapid simmer. Stir in
-      macaroni; cook, stirring occasionally, until just barely tender, about 12
-      minutes. Check for doneness after 10 minutes.
-    </li>
-    <li>
-      Remove from the heat and discard bay leaves. Stir in Cheddar and parsley.
-      Cover and let rest for 5 minutes. Taste and season as desired.
-    </li>
-  </ol>
+  <div class="recipe">
+    <ul>
+      <li>1 tablespoon olive oil</li>
+      <li>2 pounds lean ground beef</li>
+      <li>1 large onion, diced</li>
+      <li>4 cloves garlic, minced</li>
+      <li>2 large bay leaves</li>
+      <li>2 tablespoons paprika</li>
+      <li>2 tablespoons italian seasoning</li>
+      <li>2 tablespoon salt</li>
+      <li>1/2 teaspoon ground black pepper</li>
+      <li>1/4 teaspoon cayenne pepper</li>
+      <li>1 quart chicken broth</li>
+      <li>1 (24 ounce) jar marinara sauce</li>
+      <li>1 (15 ounce) can diced tomatoes</li>
+      <li>1 cup water</li>
+      <li>2 tablespoons soy sauce</li>
+      <li>2 cups elbow macaroni</li>
+      <li>1/4 cup chopped italian parsley</li>
+      <li>1 cup shredded cheddar cheese</li>
+    </ul>
+    <ol>
+      <li>Gather all Ingredients</li>
+      <li>
+        Heat oil in a pot over medium-high heat. Add ground beef and onion; cook
+        and stir until beef is browned and crumbly and onion is translucent,
+        about 5 minutes. Continue to cook and stir until liquid is evaporated, 3
+        to 5 minutes. Add garlic, bay leaves, paprika, Italian seasoning, salt,
+        black pepper, and cayenne.
+      </li>
+      <li>
+        Cook, stirring occasionally, until flavors come together, about 3
+        minutes. Pour in broth, marinara sauce, and diced tomatoes. Pour water
+        into the sauce jar, swirl, and pour into the pot. Stir in soy sauce;
+        bring to a simmer. Reduce the heat to medium and simmer until flavors
+        intensify, about 30 minutes.
+      </li>
+      <li>
+        Increase the heat to medium-high and bring to a rapid simmer. Stir in
+        macaroni; cook, stirring occasionally, until just barely tender, about
+        12 minutes. Check for doneness after 10 minutes.
+      </li>
+      <li>
+        Remove from the heat and discard bay leaves. Stir in Cheddar and
+        parsley. Cover and let rest for 5 minutes. Taste and season as desired.
+      </li>
+    </ol>
+  </div>
+  <footer>
+    <p>Created by Daniel A Scott</p>
+  </footer>
 </body>
