--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -1,35 +1,49 @@
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Chef Dan's Buttermilk Pancakes</title>
+
+  <link rel="stylesheet" href="/styles.css" />
+</head>
 <body>
   <h1>Chef Dan's Buttermilk Pancakes</h1>
   <img
     src="/images/pancake.jpg"
     alt="Finished Pancakes"
-    width="500"
+    width="auto"
     height="400"
+    style="display: block; margin-left: auto; margin-right: auto"
   />
-  <p>
+  <p style="text-align: center">
     These pancakes are light and fluffy and great for a weekend brunch. Add
     blueberries, strawberries, bananas, chocolate chips, or anything else you
     like. Serve with real maple syrup.
   </p>
-  <ul>
-    <li>1 1/2 cups all-purpose flour</li>
-    <li>3 1/2 teaspoons baking powder</li>
-    <li>1 teaspoon salt</li>
-    <li>1 tablespoon white sugar</li>
-    <li>1 1/4 cups milk</li>
-    <li>1 egg</li>
-    <li>3 tablespoons butter, melted</li>
-  </ul>
-  <ol>
-    <li>
-      In a large bowl, sift together the flour, baking powder, salt and sugar.
-      Make a well in the center and pour in the milk, egg and melted butter; mix
-      until smooth.
-    </li>
-    <li>
-      Heat a lightly oiled griddle or frying pan over medium high heat. Pour or
-      scoop the batter onto the griddle, using approximately 1/4 cup for each
-      pancake. Brown on both sides and serve hot.
-    </li>
-  </ol>
+  <div class="recipe">
+    <ul>
+      <li>1 1/2 cups all-purpose flour</li>
+      <li>3 1/2 teaspoons baking powder</li>
+      <li>1 teaspoon salt</li>
+      <li>1 tablespoon white sugar</li>
+      <li>1 1/4 cups milk</li>
+      <li>1 egg</li>
+      <li>3 tablespoons butter, melted</li>
+    </ul>
+    <ol>
+      <li>
+        In a large bowl, sift together the flour, baking powder, salt and sugar.
+        Make a well in the center and pour in the milk, egg and melted butter;
+        mix until smooth.
+      </li>
+      <li>
+        Heat a lightly oiled griddle or frying pan over medium high heat. Pour
+        or scoop the batter onto the griddle, using approximately 1/4 cup for
+        each pancake. Brown on both sides and serve hot.
+      </li>
+    </ol>
+  </div>
+  <footer>
+    <p>Created by Daniel A Scott</p>
+  </footer>
 </body>
